lanecwe-Prod/src/objects/Implementation_Services__c.object
<CustomObject>
    <fields>
        <fullName>Admin_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For doing data updates, etc.</description>
        <label>Admin Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adoption_Specialist_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the User doing the Adoption</inlineHelpText>
        <label>Adoption Specialist Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Implementation_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_Cycle__c</fullName>
        <label>Bill Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EOM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bill_Review_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for IST Reporting</description>
        <label>Bill Review Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <formula>TEXT( Implementation_Owner__r.Channel__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckboxForWFRule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckboxForWFRule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IST Field; for Reporting &amp; Email notifications</description>
        <label>Company Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Open_before_Opp_Close__c</fullName>
        <description>IF( 
( Related_Opportunity__r.Closed_Pre_Implementation_Timestamp__c  -   CreatedDate  ) &gt; 26, (( Related_Opportunity__r.Closed_Pre_Implementation_Timestamp__c  -   CreatedDate  ) -8), 
IF( 
( Related_Opportunity__r.Closed_Pre_Implementation_Timestamp__c  -   CreatedDate  ) &gt; 19, (( Related_Opportunity__r.Closed_Pre_Implementation_Timestamp__c  -   CreatedDate  ) -6), 
IF( 
( Related_Opportunity__r.Closed_Pre_Implementation_Timestamp__c  -   CreatedDate  ) &gt; 12, (( Related_Opportunity__r.Closed_Pre_Implementation_Timestamp__c  -   CreatedDate  ) -4), 
IF( 
( Related_Opportunity__r.Closed_Pre_Implementation_Timestamp__c  -   CreatedDate  ) &gt; 5, (( Related_Opportunity__r.Closed_Pre_Implementation_Timestamp__c  -   CreatedDate  ) -2), 
( Related_Opportunity__r.Closed_Pre_Implementation_Timestamp__c  -   CreatedDate  ) 
))))</description>
        <formula>CASE(MOD( DATEVALUE(CreatedDate   ) - DATE(1985,6,24),7),

0 , CASE( MOD(( DATEVALUE(Related_Opportunity__r.Closed_Pre_Implementation_Timestamp__c  )) - (DATEVALUE(CreatedDate   )),7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD(( DATEVALUE(Related_Opportunity__r.Closed_Pre_Implementation_Timestamp__c  )) - (DATEVALUE(CreatedDate   )),7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD(( DATEVALUE(Related_Opportunity__r.Closed_Pre_Implementation_Timestamp__c  )) - (DATEVALUE(CreatedDate   )),7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD(( DATEVALUE(Related_Opportunity__r.Closed_Pre_Implementation_Timestamp__c  )) - (DATEVALUE(CreatedDate   )),7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD(( DATEVALUE(Related_Opportunity__r.Closed_Pre_Implementation_Timestamp__c  )) - (DATEVALUE(CreatedDate   )),7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD(( DATEVALUE(Related_Opportunity__r.Closed_Pre_Implementation_Timestamp__c  )) -(DATEVALUE(CreatedDate   )),7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD(( DATEVALUE(Related_Opportunity__r.Closed_Pre_Implementation_Timestamp__c  )) - (DATEVALUE(CreatedDate   )),7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( (( DATEVALUE(Related_Opportunity__r.Closed_Pre_Implementation_Timestamp__c  )) - (DATEVALUE(CreatedDate   ))) )/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Approximate Total Days the Implementation Record was open before the Opportunity was set to Closed Won.</inlineHelpText>
        <label>Days Open Pre-Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_at_Adoption_Status__c</fullName>
        <description>Shows the total Days this Implementation was at this status.

IF( 
( TS9_Adoption_Status_Unselected__c  -   TS9_Adoption_Status_Set__c  ) &gt; 26, (( TS9_Adoption_Status_Unselected__c  -   TS9_Adoption_Status_Set__c  ) -8), 
IF( 
( TS9_Adoption_Status_Unselected__c  -   TS9_Adoption_Status_Set__c  ) &gt; 19, (( TS9_Adoption_Status_Unselected__c  -   TS9_Adoption_Status_Set__c  ) -6), 
IF( 
( TS9_Adoption_Status_Unselected__c  -   TS9_Adoption_Status_Set__c  ) &gt; 12, (( TS9_Adoption_Status_Unselected__c  -   TS9_Adoption_Status_Set__c  ) -4), 
IF( 
( TS9_Adoption_Status_Unselected__c  -   TS9_Adoption_Status_Set__c  ) &gt; 5, (( TS9_Adoption_Status_Unselected__c  -   TS9_Adoption_Status_Set__c  ) -2), 
( TS9_Adoption_Status_Unselected__c  -   TS9_Adoption_Status_Set__c  ) 
))))</description>
        <formula>CASE(MOD( DATEVALUE(TS9_Adoption_Status_Set__c ) - DATE(1985,6,24),7),

0 , CASE( MOD(( DATEVALUE(TS9_Adoption_Status_Unselected__c )) - (DATEVALUE(TS9_Adoption_Status_Set__c )),7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD(( DATEVALUE(TS9_Adoption_Status_Unselected__c )) - (DATEVALUE(TS9_Adoption_Status_Set__c )),7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD(( DATEVALUE(TS9_Adoption_Status_Unselected__c )) - (DATEVALUE(TS9_Adoption_Status_Set__c )),7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD(( DATEVALUE(TS9_Adoption_Status_Unselected__c )) - (DATEVALUE(TS9_Adoption_Status_Set__c )),7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD(( DATEVALUE(TS9_Adoption_Status_Unselected__c )) - (DATEVALUE(TS9_Adoption_Status_Set__c )),7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD(( DATEVALUE(TS9_Adoption_Status_Unselected__c )) -(DATEVALUE(TS9_Adoption_Status_Set__c )),7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD(( DATEVALUE(TS9_Adoption_Status_Unselected__c )) - (DATEVALUE(TS9_Adoption_Status_Set__c )),7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( (( DATEVALUE(TS9_Adoption_Status_Unselected__c )) - (DATEVALUE(TS9_Adoption_Status_Set__c ))) )/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This displays approximate days that this record had the Implementation Stage set to include Adoption.</inlineHelpText>
        <label>Days at Adoption Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_at_Bill_Review_Status__c</fullName>
        <description>Shows the total Days this Implementation was at this status.


IF( 
( TS8_Bill_Review_Status_Unselected__c  -   TS8_Bill_Review_Status_Set__c  ) &gt; 26, (( TS8_Bill_Review_Status_Unselected__c  -   TS8_Bill_Review_Status_Set__c  ) -8), 
IF( 
( TS8_Bill_Review_Status_Unselected__c  -   TS8_Bill_Review_Status_Set__c  ) &gt; 19, (( TS8_Bill_Review_Status_Unselected__c  -   TS8_Bill_Review_Status_Set__c  ) -6), 
IF( 
( TS8_Bill_Review_Status_Unselected__c  -   TS8_Bill_Review_Status_Set__c  ) &gt; 12, (( TS8_Bill_Review_Status_Unselected__c  -   TS8_Bill_Review_Status_Set__c  ) -4), 
IF( 
( TS8_Bill_Review_Status_Unselected__c  -   TS8_Bill_Review_Status_Set__c  ) &gt; 5, (( TS8_Bill_Review_Status_Unselected__c  -   TS8_Bill_Review_Status_Set__c  ) -2), 

( TS8_Bill_Review_Status_Unselected__c  -   TS8_Bill_Review_Status_Set__c  ) 
))))</description>
        <formula>CASE(MOD( DATEVALUE(TS8_Bill_Review_Status_Set__c ) - DATE(1985,6,24),7),

0 , CASE( MOD(( DATEVALUE(TS8_Bill_Review_Status_Unselected__c  )) - (DATEVALUE(TS8_Bill_Review_Status_Set__c )),7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD(( DATEVALUE(TS8_Bill_Review_Status_Unselected__c  )) - (DATEVALUE(TS8_Bill_Review_Status_Set__c )),7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD(( DATEVALUE(TS8_Bill_Review_Status_Unselected__c  )) - (DATEVALUE(TS8_Bill_Review_Status_Set__c )),7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD(( DATEVALUE(TS8_Bill_Review_Status_Unselected__c  )) - (DATEVALUE(TS8_Bill_Review_Status_Set__c )),7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD(( DATEVALUE(TS8_Bill_Review_Status_Unselected__c  )) - (DATEVALUE(TS8_Bill_Review_Status_Set__c )),7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD(( DATEVALUE(TS8_Bill_Review_Status_Unselected__c  )) -(DATEVALUE(TS8_Bill_Review_Status_Set__c )),7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD(( DATEVALUE(TS8_Bill_Review_Status_Unselected__c  )) - (DATEVALUE(TS8_Bill_Review_Status_Set__c )),7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( (( DATEVALUE(TS8_Bill_Review_Status_Unselected__c  )) - (DATEVALUE(TS8_Bill_Review_Status_Set__c ))) )/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is tied to your setting the Implementation Stage value to Bill Review, then by checking the Bill Review Completed checkbox. Without doing both of these you will not see a value here.</inlineHelpText>
        <label>Days at Bill Review Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_at_Discover_Status__c</fullName>
        <formula>CASE(MOD( DATEVALUE(TS_Discover_Status_Set__c ) - DATE(1985,6,24),7),

0 , CASE( MOD(( DATEVALUE(TS_Discover_Status_Unselected__c )) - (DATEVALUE(TS_Discover_Status_Set__c )),7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD(( DATEVALUE(TS_Discover_Status_Unselected__c )) - (DATEVALUE(TS_Discover_Status_Set__c )),7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD(( DATEVALUE(TS_Discover_Status_Unselected__c )) - (DATEVALUE(TS_Discover_Status_Set__c )),7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD(( DATEVALUE(TS_Discover_Status_Unselected__c )) - (DATEVALUE(TS_Discover_Status_Set__c )),7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD(( DATEVALUE(TS_Discover_Status_Unselected__c )) - (DATEVALUE(TS_Discover_Status_Set__c )),7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD(( DATEVALUE(TS_Discover_Status_Unselected__c )) -(DATEVALUE(TS_Discover_Status_Set__c )),7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD(( DATEVALUE(TS_Discover_Status_Unselected__c )) - (DATEVALUE(TS_Discover_Status_Set__c )),7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( (( DATEVALUE(TS_Discover_Status_Unselected__c )) - (DATEVALUE(TS_Discover_Status_Set__c ))) )/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This displays approximate days that this record had the Implementation Stage set to include Discovery.</inlineHelpText>
        <label>Days at Discovery Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_at_Hand_off_Status__c</fullName>
        <formula>CASE(MOD( DATEVALUE(TS_Hand_off_Status_Set__c ) - DATE(1985,6,24),7),

0 , CASE( MOD(( DATEVALUE(TS_Hand_off_Status_Unselected__c )) - (DATEVALUE(TS_Hand_off_Status_Set__c )),7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD(( DATEVALUE(TS_Hand_off_Status_Unselected__c )) - (DATEVALUE(TS_Hand_off_Status_Set__c )),7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD(( DATEVALUE(TS_Hand_off_Status_Unselected__c )) - (DATEVALUE(TS_Hand_off_Status_Set__c )),7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD(( DATEVALUE(TS_Hand_off_Status_Unselected__c )) - (DATEVALUE(TS_Hand_off_Status_Set__c )),7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD(( DATEVALUE(TS_Hand_off_Status_Unselected__c )) - (DATEVALUE(TS_Hand_off_Status_Set__c )),7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD(( DATEVALUE(TS_Hand_off_Status_Unselected__c )) -(DATEVALUE(TS_Hand_off_Status_Set__c )),7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD(( DATEVALUE(TS_Hand_off_Status_Unselected__c )) - (DATEVALUE(TS_Hand_off_Status_Set__c )),7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( (( DATEVALUE(TS_Hand_off_Status_Unselected__c )) - (DATEVALUE(TS_Hand_off_Status_Set__c ))) )/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is tied to your setting the Implementation Stage value to Hand-off, then by checking the Hand-off Completed checkbox.  Without doing both of these you will not see a value here.</inlineHelpText>
        <label>Days at Hand-off Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_at_Initial_Communication_Status__c</fullName>
        <description>Shows the total Days this Implementation was at this status.</description>
        <formula>IF( 
( TS2_Initial_Communication_Status_Unset__c  -  TS2_Initial_Communication_Status_Set__c ) &gt; 26, (( TS2_Initial_Communication_Status_Unset__c  -  TS2_Initial_Communication_Status_Set__c ) -8), 
IF( 
( TS2_Initial_Communication_Status_Unset__c  -  TS2_Initial_Communication_Status_Set__c ) &gt; 19, (( TS2_Initial_Communication_Status_Unset__c  -  TS2_Initial_Communication_Status_Set__c ) -6), 
IF( 
( TS2_Initial_Communication_Status_Unset__c  -  TS2_Initial_Communication_Status_Set__c ) &gt; 12, (( TS2_Initial_Communication_Status_Unset__c  -  TS2_Initial_Communication_Status_Set__c ) -4), 
IF( 
( TS2_Initial_Communication_Status_Unset__c  -  TS2_Initial_Communication_Status_Set__c ) &gt; 5, (( TS2_Initial_Communication_Status_Unset__c  -  TS2_Initial_Communication_Status_Set__c ) -2), 
( TS2_Initial_Communication_Status_Unset__c  -  TS2_Initial_Communication_Status_Set__c ) 
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This displays approximate days that this record had the Implementation Stage set to include Initial Communication.</inlineHelpText>
        <label>Days at Initial Communication Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_at_Plan_Status__c</fullName>
        <formula>CASE(MOD( DATEVALUE(TS_Plan_Status_Set__c ) - DATE(1985,6,24),7),

0 , CASE( MOD(( DATEVALUE(TS_Plan_Status_Unselected__c )) - (DATEVALUE(TS_Plan_Status_Set__c )),7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD(( DATEVALUE(TS_Plan_Status_Unselected__c )) - (DATEVALUE(TS_Plan_Status_Set__c )),7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD(( DATEVALUE(TS_Plan_Status_Unselected__c )) - (DATEVALUE(TS_Plan_Status_Set__c )),7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD(( DATEVALUE(TS_Plan_Status_Unselected__c )) - (DATEVALUE(TS_Plan_Status_Set__c )),7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD(( DATEVALUE(TS_Plan_Status_Unselected__c )) - (DATEVALUE(TS_Plan_Status_Set__c )),7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD(( DATEVALUE(TS_Plan_Status_Unselected__c )) -(DATEVALUE(TS_Plan_Status_Set__c )),7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD(( DATEVALUE(TS_Plan_Status_Unselected__c )) - (DATEVALUE(TS_Plan_Status_Set__c )),7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( (( DATEVALUE(TS_Plan_Status_Unselected__c )) - (DATEVALUE(TS_Plan_Status_Set__c ))) )/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This displays approximate days that this record had the Implementation Stage set to include Plan.</inlineHelpText>
        <label>Days at Plan Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_at_Train_Status__c</fullName>
        <description>Shows the total Days this Implementation was at this status.

IF( 
( TS3_Train_Status_Unselected__c  -   TS3_Train_Status_Set__c ) &gt; 26, (( TS3_Train_Status_Unselected__c  -   TS3_Train_Status_Set__c ) -8), 
IF( 
( TS3_Train_Status_Unselected__c  -   TS3_Train_Status_Set__c ) &gt; 19, (( TS3_Train_Status_Unselected__c  -   TS3_Train_Status_Set__c ) -6), 
IF( 
( TS3_Train_Status_Unselected__c  -   TS3_Train_Status_Set__c ) &gt; 12, (( TS3_Train_Status_Unselected__c  -   TS3_Train_Status_Set__c ) -4), 
IF( 
( TS3_Train_Status_Unselected__c  -   TS3_Train_Status_Set__c ) &gt; 5, (( TS3_Train_Status_Unselected__c  -   TS3_Train_Status_Set__c ) -2), 

( TS3_Train_Status_Unselected__c  -   TS3_Train_Status_Set__c ) 
))))</description>
        <formula>CASE(MOD( DATEVALUE(TS3_Train_Status_Set__c  ) - DATE(1985,6,24),7),

0 , CASE( MOD(( DATEVALUE(TS3_Train_Status_Unselected__c   )) - (DATEVALUE(TS3_Train_Status_Set__c  )),7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD(( DATEVALUE(TS3_Train_Status_Unselected__c   )) - (DATEVALUE(TS3_Train_Status_Set__c  )),7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD(( DATEVALUE(TS3_Train_Status_Unselected__c   )) - (DATEVALUE(TS3_Train_Status_Set__c  )),7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD(( DATEVALUE(TS3_Train_Status_Unselected__c   )) - (DATEVALUE(TS3_Train_Status_Set__c  )),7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD(( DATEVALUE(TS3_Train_Status_Unselected__c   )) - (DATEVALUE(TS3_Train_Status_Set__c  )),7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD(( DATEVALUE(TS3_Train_Status_Unselected__c   )) -(DATEVALUE(TS3_Train_Status_Set__c  )),7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD(( DATEVALUE(TS3_Train_Status_Unselected__c   )) - (DATEVALUE(TS3_Train_Status_Set__c  )),7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( (( DATEVALUE(TS3_Train_Status_Unselected__c   )) - (DATEVALUE(TS3_Train_Status_Set__c  ))) )/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This displays approximate days that this record had the Implementation Stage set to include Train.</inlineHelpText>
        <label>Days at Train Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_at_on_Hold_Status__c</fullName>
        <formula>CASE(MOD( DATEVALUE(TS_Discover_Status_Set__c ) - DATE(1985,6,24),7),

0 , CASE( MOD(( DATEVALUE( TS_On_Hold_Unselected__c )) - (DATEVALUE( TS_On_Hold_Set__c )),7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD(( DATEVALUE(TS_On_Hold_Unselected__c )) - (DATEVALUE(TS_On_Hold_Set__c )),7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD(( DATEVALUE(TS_On_Hold_Unselected__c )) - (DATEVALUE(TS_On_Hold_Set__c )),7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD(( DATEVALUE(TS_On_Hold_Unselected__c )) - (DATEVALUE(TS_On_Hold_Set__c )),7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD(( DATEVALUE(TS_On_Hold_Unselected__c )) - (DATEVALUE(TS_On_Hold_Set__c )),7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD(( DATEVALUE(TS_On_Hold_Unselected__c )) -(DATEVALUE(TS_On_Hold_Set__c )),7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD(( DATEVALUE(TS_On_Hold_Unselected__c )) - (DATEVALUE(TS_On_Hold_Set__c )),7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( (( DATEVALUE(TS_On_Hold_Unselected__c )) - (DATEVALUE(TS_On_Hold_Set__c ))) )/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This displays approximate days that this record had the Implementation Stage set to include On Hold.</inlineHelpText>
        <label>Days at On Hold Status</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_for_Implementation__c</fullName>
        <description>IF( 
( Related_Opportunity__r.Closed_Won_Final_Timestamp__c  -   CreatedDate  ) &gt; 26, (( Related_Opportunity__r.Closed_Won_Final_Timestamp__c  -   CreatedDate  ) -8), 
IF( 
( Related_Opportunity__r.Closed_Won_Final_Timestamp__c  -   CreatedDate  ) &gt; 19, (( Related_Opportunity__r.Closed_Won_Final_Timestamp__c  -   CreatedDate  ) -6), 
IF( 
( Related_Opportunity__r.Closed_Won_Final_Timestamp__c  -   CreatedDate  ) &gt; 12, (( Related_Opportunity__r.Closed_Won_Final_Timestamp__c  -   CreatedDate  ) -4), 
IF( 
( Related_Opportunity__r.Closed_Won_Final_Timestamp__c  -   CreatedDate  ) &gt; 5, (( Related_Opportunity__r.Closed_Won_Final_Timestamp__c  -   CreatedDate  ) -2), 
IF(
( Related_Opportunity__r.Closed_Won_Final_Timestamp__c  -   CreatedDate  ) &lt; 0, -1,
( Related_Opportunity__r.Closed_Won_Final_Timestamp__c  -   CreatedDate  ) 
)))))</description>
        <formula>CASE(MOD( DATEVALUE(CreatedDate ) - DATE(1985,6,24),7),

0 , CASE( MOD(( DATEVALUE(Related_Opportunity__r.Closed_Won_Final_Timestamp__c )) - (DATEVALUE(CreatedDate)),7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD(( DATEVALUE(Related_Opportunity__r.Closed_Won_Final_Timestamp__c )) - (DATEVALUE(CreatedDate )),7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD(( DATEVALUE(Related_Opportunity__r.Closed_Won_Final_Timestamp__c )) - (DATEVALUE(CreatedDate )),7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD(( DATEVALUE(Related_Opportunity__r.Closed_Won_Final_Timestamp__c )) - (DATEVALUE(CreatedDate )),7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD(( DATEVALUE(Related_Opportunity__r.Closed_Won_Final_Timestamp__c )) - (DATEVALUE(CreatedDate )),7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD(( DATEVALUE(Related_Opportunity__r.Closed_Won_Final_Timestamp__c )) -(DATEVALUE(CreatedDate )),7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD(( DATEVALUE(Related_Opportunity__r.Closed_Won_Final_Timestamp__c )) - (DATEVALUE(CreatedDate )),7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( (( DATEVALUE(Related_Opportunity__r.Closed_Won_Final_Timestamp__c )) - (DATEVALUE(CreatedDate ))) )/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Approximate Total Days the Implementation Record was open before being completed.</inlineHelpText>
        <label>Days for Implementation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_CIF_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IST Field; for Reporting &amp; Email notifications</description>
        <label>Final CIF/TASS Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hand_off_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hand-off Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IST_Completed_Status__c</fullName>
        <inlineHelpText>Used to track the final status of an implementation.  Please select Completed or Cancelled to completely close this implementation record.</inlineHelpText>
        <label>Implementation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No IS Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IST_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only select once all Implementation Steps have been completed as this will update the Opportunity to Closed Won - Implementation Completed</inlineHelpText>
        <label>x-IST Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IST_Notes__c</fullName>
        <label>IST Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IST_Recent_Notes__c</fullName>
        <description>Shows the first 200 characters of the description field.  Used in List Views and Reporting.</description>
        <inlineHelpText>Shows the first 200 characters of the description field.  Used in List Views and Reporting.</inlineHelpText>
        <label>IST Recent Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IST_Status__c</fullName>
        <label>Implementation Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Train</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bill Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hand-off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No IS Assigned</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Implementation_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Implementation_Services_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Record_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Allows to sum records for this object for reporting purposes when record counts could get inflated.</inlineHelpText>
        <label>Implementation Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Small Business &lt;2K MRR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-Size &gt;2K but &lt;20K MRR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Enterprise (Domestic)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Enterprise (Global)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum &gt; 75K MRR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner &lt;20K MRR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner &lt;75K MRR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner &lt;5K MRR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_modified_Date_by_non_admin__c</fullName>
        <description>Date/Time field that is set via WF Rule whenever a non-admin updates an Account in SFDC. Used to see rep neglecting account trends, etc.</description>
        <label>Last modified Date by (non-admin)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>License_List_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IST Field; for Reporting &amp; Email notifications</description>
        <label>License List Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link_to_Feature_Sheet__c</fullName>
        <description>IST Field; for Reporting &amp; Email notifications</description>
        <inlineHelpText>For email notifications</inlineHelpText>
        <label>Link to Feature Sheet</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Final_CIF__c</fullName>
        <description>IST Field; for Reporting &amp; Email notifications</description>
        <inlineHelpText>For email notifications</inlineHelpText>
        <label>Link to Final CIF</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_License_List__c</fullName>
        <description>IST Field; for Reporting &amp; Email notifications</description>
        <inlineHelpText>For email notifications</inlineHelpText>
        <label>Link to License List</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <formula>Implementation_Owner__r.Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Only_Notes__c</fullName>
        <label>Manager Only Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Master_Implementation_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please select this only when you need to relate other Implementation Records to this one.  Used with the Master Implementation Lookup field.</inlineHelpText>
        <label>IsMaster Implementation Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_Implementation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to lookup Implementation records flagged as IsMaster</inlineHelpText>
        <label>Master Implementation</label>
        <referenceTo>Implementation_Services__c</referenceTo>
        <relationshipLabel>Follow-on Implementations</relationshipLabel>
        <relationshipName>Implementation_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Multi_Regional_or_Global__c</fullName>
        <label>Multi-Regional or Global</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opp_Supervisors_Email__c</fullName>
        <label>Opp Supervisors Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Owner_Region__c</fullName>
        <formula>TEXT( Implementation_Owner__r.Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Contract_Timestamp__c</fullName>
        <label>Pre Contract Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pre_Implementation_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Implementation Survey_IST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <label>Project Manager</label>
        <picklist>
            <picklistValues>
                <fullName>Sharon Long</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Melba Wallace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meredith McHeffey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clare Harrington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diana Chan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rates_Entered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IST Field; for Reporting &amp; Email notifications</description>
        <label>Rates Entered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <formula>Related_Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Account the Related Opportunity is associated with.</inlineHelpText>
        <label>Related Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Implementation Services</relationshipLabel>
        <relationshipName>Implementation_Services</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sales_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Implementation_Services2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <formula>Implementation_Owner__r.Manager.FirstName +&quot; &quot;+ Implementation_Owner__r.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supervisor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TS1_Build_Status_Set__c</fullName>
        <description>Timestamp tracking when Build Status has been set</description>
        <label>TS1_Build Status_Set</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TS1_Build_Status_UnSelected__c</fullName>
        <description>Timestamp tracking when Build Status has been unselected</description>
        <label>TS1_Build Status_UnSelected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TS2_Initial_Communication_Status_Set__c</fullName>
        <description>Timestamp tracking when Initial Communication Status has been set</description>
        <label>TS2_Initial Communication Status_Set</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TS2_Initial_Communication_Status_Unset__c</fullName>
        <description>Timestamp tracking when Initial Communication Status has been set</description>
        <label>TS2_Initial Communication Status Unset</label>
        <type>DateTime</type>
    </fields>
</CustomObject>